--- a/DragonAcc/DragonAcc.Service/DragonAcc.Service.csproj
+++ b/DragonAcc/DragonAcc.Service/DragonAcc.Service.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DragonAcc.Infrastructure\DragonAcc.Infrastructure.csproj" />
   </ItemGroup>
 
