--- a/DragonAcc/FrontEnd/package.json
+++ b/DragonAcc/FrontEnd/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "dompurify": "^3.2.2",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
     "particles.js": "^2.0.0",
